using activated route with services

--- a/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes-detail/recipes-detail.page.html
+++ b/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes-detail/recipes-detail.page.html
@@ -1,13 +1,34 @@
-<ion-header [translucent]="true">
+<ion-header >
   <ion-toolbar>
-    <ion-title>recipes-detail</ion-title>
+    <ion-title>Recipes-detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">recipes-detail</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-img [src]="loadedRecipe.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        {{loadedRecipe.title}}
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-item *ngFor="let ig of loadedRecipe.ingredients">
+            {{ ig }}
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
 </ion-content>
