--- a/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes-detail/recipes-detail.page.html
+++ b/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes-detail/recipes-detail.page.html
@@ -1,6 +1,12 @@
 <ion-header >
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/recipes"></ion-back-button>
+    </ion-buttons>
     <ion-title>Recipes-detail</ion-title>
+    <ion-buttons slot="primary"> 
+      <ion-button (click)="onDeleteRecipe()"><ion-icon name="trash" slot="icon-only"></ion-icon></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +21,7 @@
 
     <ion-row>
       <ion-col>
-        {{loadedRecipe.title}}
+        <h1 text>{{loadedRecipe.title}}</h1>
       </ion-col>
     </ion-row>
 
