--- a/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes.page.html
+++ b/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true">
 <ion-list>
-  <ion-item *ngFor="let recipe of recipes">
+  <ion-item *ngFor="let recipe of recipes" [routerLink]="['/recipes', recipe.id]" >
     <ion-avatar>
       <ion-img [src]="recipe.imageUrl"></ion-img>
     </ion-avatar>
