--- a/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes.page.html
+++ b/Ionic with Angular/ionic-dev-app/src/app/recipes/recipes.page.html
@@ -5,14 +5,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<ion-list>
-  <ion-item *ngFor="let recipe of recipes" [routerLink]="['/recipes', recipe.id]" >
-    <ion-avatar>
-      <ion-img [src]="recipe.imageUrl"></ion-img>
-    </ion-avatar>
-    <ion-label>
-      {{recipe.title}}
-    </ion-label>
-  </ion-item>
-</ion-list>
+  <ion-list>
+    <app-recipe-item
+      *ngFor="let recipe of recipes"
+      [recipeItem]="recipe"
+    ></app-recipe-item>
+  </ion-list>
 </ion-content>
