--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -5,9 +5,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-grid>
+  <ion-grid style="text-align: center;">
     <ion-row>
-      <ion-col>
+      <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-card>
           <ion-card-header>
             <ion-card-title>
@@ -22,6 +22,22 @@
             <p>{{ loadedPlaces[0].descriptio}}</p>
           </ion-card-content>
         </ion-card>
+      </ion-col>
+    </ion-row>
+      
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center;">
+        <ion-list>
+          <ion-item *ngFor="let place of loadedPlaces.slice(1)">
+            <ion-thumbnail slot="start">
+              <ion-img [src]="place.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{ place.title }}</h2>
+              <p>{{ place.descriptio }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
