Added more button

--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -19,8 +19,11 @@
           </ion-card-header>
           <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{ loadedPlaces[0].descriptio}}</p>
+            <p>{{ loadedPlaces[0].description}}</p>
           </ion-card-content>
+          <div text-right padding>
+            <ion-button fill="clear" color="primary" [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">More</ion-button>
+          </div>
         </ion-card>
       </ion-col>
     </ion-row>
@@ -34,7 +37,7 @@
             </ion-thumbnail>
             <ion-label>
               <h2>{{ place.title }}</h2>
-              <p>{{ place.descriptio }}</p>
+              <p>{{ place.description }}</p>
             </ion-label>
           </ion-item>
         </ion-list>
