--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -2,13 +2,12 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers">
-
       </ion-back-button>
     </ion-buttons>
-    <ion-title>Offer Bookings</ion-title>
+    <ion-title>{{place.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
- 
+  <ion-button margin  [routerLink]="['/','places', 'tabs', 'offers', 'edit',place.id]">Edit</ion-button>
 </ion-content>
