menu dropdown added

--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -1,9 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start" contentId="main-content">
+      <ion-menu-button ></ion-menu-button>
+    </ion-buttons>
     <ion-title>Discover Places</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<!-- main frontcard  -->
 <ion-content [fullscreen]="true">
   <ion-grid style="text-align: center">
     <ion-row>
@@ -29,6 +33,8 @@
         </ion-card>
       </ion-col>
     </ion-row>
+
+    <!-- List of remaining cards -->
 
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center">
