--- a/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
@@ -5,5 +5,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">E-Mail</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  </ion-list>
   <ion-button color="primary" (click)="login()">Login</ion-button>
 </ion-content>
