--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -38,8 +38,8 @@
 
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center">
-        <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)" [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
+        <cdk-virtual-scroll-viewport itemSize="20" class="viewport">
+          <ion-item *cdkVirtualFor="let place of listedLoadedPlaces"  [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl">
               </ion-img>
@@ -49,7 +49,7 @@
               <p>{{ place.description }}</p>
             </ion-label>
           </ion-item>
-        </ion-list>
+     </cdk-virtual-scroll-viewport>
       </ion-col>
     </ion-row>
   </ion-grid>
