--- a/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
@@ -11,5 +11,10 @@
       <ion-input></ion-input>
     </ion-item>
   </ion-list>
+
+  <!-- <div style="text-align: center;">
+     <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  </div> -->
+ 
   <ion-button color="primary" (click)="login()">Login</ion-button>
 </ion-content>
