--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -9,6 +9,10 @@
 
 <!-- main frontcard  -->
 <ion-content [fullscreen]="true">
+  <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
+    <ion-segment-button value="all" >All Places</ion-segment-button>
+    <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
+  </ion-segment>
   <ion-grid style="text-align: center">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
