--- a/Ionic-with-Angular/ionic-booking-app/src/global.scss
+++ b/Ionic-with-Angular/ionic-booking-app/src/global.scss
@@ -35,3 +35,73 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+:root {
+	--ion-color-primary: #f72664;
+	--ion-color-primary-rgb: 236,60,113;
+	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast-rgb: 0,0,0;
+	--ion-color-primary-shade: #d92158;
+	--ion-color-primary-tint: #f83c74;
+
+	--ion-color-secondary: #a70eaa;
+	--ion-color-secondary-rgb: 167,14,170;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #930c96;
+	--ion-color-secondary-tint: #b026b3;
+
+	--ion-color-tertiary: #790fdb;
+	--ion-color-tertiary-rgb: 121,15,219;
+	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary-contrast-rgb: 255,255,255;
+	--ion-color-tertiary-shade: #6a0dc1;
+	--ion-color-tertiary-tint: #8627df;
+
+	--ion-color-success: #2dd55b;
+	--ion-color-success-rgb: 45,213,91;
+	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast-rgb: 0,0,0;
+	--ion-color-success-shade: #28bb50;
+	--ion-color-success-tint: #42d96b;
+
+	--ion-color-warning: #ffc409;
+	--ion-color-warning-rgb: 255,196,9;
+	--ion-color-warning-contrast: #000000;
+	--ion-color-warning-contrast-rgb: 0,0,0;
+	--ion-color-warning-shade: #e0ac08;
+	--ion-color-warning-tint: #ffca22;
+
+	--ion-color-danger: #f90b1f;
+	--ion-color-danger-rgb: 249,11,31;
+	--ion-color-danger-contrast: #000000;
+	--ion-color-danger-contrast-rgb: 0,0,0;
+	--ion-color-danger-shade: #db0a1b;
+	--ion-color-danger-tint: #fa2335;
+
+	--ion-color-light: #f7f9fc;
+	--ion-color-light-rgb: 247,249,252;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #d9dbde;
+	--ion-color-light-tint: #f8fafc;
+
+	--ion-color-medium: #5f5f5f;
+	--ion-color-medium-rgb: 95,95,95;
+	--ion-color-medium-contrast: #ffffff;
+	--ion-color-medium-contrast-rgb: 255,255,255;
+	--ion-color-medium-shade: #545454;
+	--ion-color-medium-tint: #6f6f6f;
+
+	--ion-color-dark: #a04040;
+	--ion-color-dark-rgb: 160,64,64;
+	--ion-color-dark-contrast: #ffffff;
+	--ion-color-dark-contrast-rgb: 255,255,255;
+	--ion-color-dark-shade: #8d3838;
+	--ion-color-dark-tint: #aa5353;
+
+    --ion-toolbar-background: var(--ion-color-primary);
+    --ion-toolbar-color: var(--ion-color-primary-contrast);
+
+}
+
