--- a/Ionic-with-Angular/ionic-booking-app/src/theme/variables.scss
+++ b/Ionic-with-Angular/ionic-booking-app/src/theme/variables.scss
@@ -1,3 +1,11 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
 
+// ion-toolbar {
+//   ion-button,
+//   ion-back-button,
+//   ion-menu-button,
+//   .sc-ion-back-button-ios-h {
+//     --color: purple;
+//   }
+// }
