--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/offer-item/offer-item.component.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/offer-item/offer-item.component.html
@@ -4,13 +4,16 @@
   </ion-thumbnail>
   <ion-label>
     <h1>{{ offer.title }}</h1>
-    <div>
-
-      <ion-icon name="calendar"></ion-icon>
-      <ion-text color="primary">{{ getDummyDate() | date }}</ion-text>
-      <span>to</span>
-       <ion-icon name="calendar"></ion-icon>
-      <ion-text color="primary">{{ getDummyDate() | date }}</ion-text>
+    <div class="offer-details">
+      <ion-icon name="calendar" color="primary"></ion-icon>
+      <ion-text color="tertiary" class="space-left"
+        >{{ getDummyDate() | date }}
+      </ion-text>
+      <span class="space-left"> to </span>
+      <ion-icon name="calendar" color="primary" class="space-left"></ion-icon>
+      <ion-text color="tertiary" class="space-left"
+        >{{ getDummyDate() | date }}
+      </ion-text>
     </div>
   </ion-label>
 </ion-item>
