--- a/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
@@ -5,16 +5,36 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item>
-      <ion-label position="floating">E-Mail</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">E-Mail</ion-label>
+            <ion-input></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-button color="primary" fill="clear" expand="block"
+          >Switch to Login</ion-button
+        >
+        <ion-button color="primary" (click)="login()" expand="block"
+          >Login</ion-button
+        >
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <!-- <div style="text-align: center;">
      <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
   </div> -->
- 
-  <ion-button color="primary" (click)="login()">Login</ion-button>
 </ion-content>
