added authentication boiler plate

--- a/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/auth/auth.page.html
@@ -1,39 +1,83 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{isLogin ? 'Login' : 'SignUp'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">E-Mail</ion-label>
-            <ion-input></ion-input>
-          </ion-item>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <!-- EMAIL FIELD -->
+            <ion-item
+              [class.input-invalid]="emailCtrl.invalid && emailCtrl.touched"
+              [class.input-valid]="emailCtrl.valid && emailCtrl.touched"
+            >
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input
+                type="text"
+                name="email"
+                ngModel
+                required
+                email
+                #emailCtrl="ngModel"
+              >
+              </ion-input>
+            </ion-item>
+            <p class="error-msg" *ngIf="emailCtrl.invalid && emailCtrl.touched">
+              Please enter a valid email address.
+            </p>
 
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password"></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
+            <!-- PASSWORD FIELD -->
+            <ion-item
+              [class.input-invalid]="passwordCtrl.invalid && passwordCtrl.touched"
+              [class.input-valid]="passwordCtrl.valid && passwordCtrl.touched"
+            >
+              <ion-label position="floating">Password</ion-label>
+              <ion-input
+                type="password"
+                name="password"
+                ngModel
+                required
+                minlength="6"
+                #passwordCtrl="ngModel"
+              >
+              </ion-input>
+            </ion-item>
+            <p
+              class="error-msg"
+              *ngIf="passwordCtrl.invalid && passwordCtrl.touched"
+            >
+              Password must be at least 6 characters.
+            </p>
+          </ion-list>
+        </ion-col>
+      </ion-row>
 
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-button color="primary" fill="clear" expand="block"
-          >Switch to Login</ion-button
-        >
-        <ion-button color="primary" (click)="login()" expand="block"
-          >Login</ion-button
-        >
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button
+            type="button"
+            color="primary"
+            (click)="onSwitchAuthModel()"
+            fill="clear"
+            expand="block"
+            >Switch to {{isLogin ? 'Signup' : 'Login'}}</ion-button
+          >
+          <ion-button
+            type="submit"
+            color="primary"
+            (click)="login()"
+            expand="block"
+            [disabled]="!f.valid"
+            >Login</ion-button
+          >
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
   <!-- <div style="text-align: center;">
      <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
   </div> -->
