--- a/Ionic-with-Angular/ionic-booking-app/src/global.scss
+++ b/Ionic-with-Angular/ionic-booking-app/src/global.scss
@@ -108,3 +108,8 @@
 ion-button {
    --box-shadow: 2px 2px 20px 0 rgba(0, 0, 0, 0.4);
 }
+
+.ion-invalid, .ion-touched {
+	color: var(--ion-color-danger);
+        
+}
