--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/new-offer/new-offer.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/new-offer/new-offer.page.html
@@ -8,5 +8,24 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+        <ion-label position="floating">Title</ion-label>
+          <ion-input type="text" autocorrect autocomplete></ion-input>
+         </ion-item>
+    </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+         <ion-item>
+          <ion-label position="floating">Short Description</ion-label>
+          <ion-textarea></ion-textarea>
+          </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
  
 </ion-content>
