added edit offer form

--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -8,5 +8,33 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
- 
+   <form [formGroup]="form">
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Title</ion-label>
+          <ion-input type="text" autocorrect autocomplete formControlName="title"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Short Description</ion-label>
+          <ion-textarea rows="3" formControlName="description"></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row *ngIf="!form.get('description')?.valid && form.get('description')?.touched"
+>
+      <ion-col size-sm="6" offset-sm="3">
+        <p>Description must contains minimum 0 to 180 character.</p>
+      </ion-col>
+    </ion-row>
+  
+  </ion-grid>
+  </form>
 </ion-content>
