--- a/Ionic-with-Angular/ionic-booking-app/src/app/bookings/create-booking/create-booking.component.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/bookings/create-booking/create-booking.component.html
@@ -11,7 +11,85 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="text-align: center;" padding>
-  <h1>{{ selectedPlace.description }}</h1>
-  <ion-button color="primary" (click)="onBookPlace()">Book!</ion-button>
+<ion-content style="text-align: center" padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">First name</ion-label>
+          <ion-input type="text" ngModel name="firstName" required></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Last name</ion-label>
+          <ion-input type="text" ngModel name="lastName" required></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">No. Of Guest</ion-label>
+          <ion-select name="guestNumber" [ngModel]="'2'">
+            <ion-select-option value="1">1</ion-select-option>
+            <ion-select-option value="2">2</ion-select-option>
+            <ion-select-option value="3">3</ion-select-option>
+            <ion-select-option value="4">4</ion-select-option>
+            <ion-select-option value="5">5</ion-select-option> </ion-select
+          >
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+         <ion-label position="floating">From</ion-label>
+        <ion-item>
+         
+          <ion-datetime
+            display-format="MMM DD YYYY"
+            picker-format="YY MMM DD"
+            ngModel
+              [min]="selectedPlace.dateFrom"
+            [max]="selectedPlace.dateTo"
+            [ngModel]="startDate"
+            name="fromDate"
+            required
+            #startDateCtrl="ngModel"
+          ></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-label position="floating">To</ion-label>
+        <ion-item>
+          
+          <ion-datetime
+            display-format="MMM DD YYYY"
+            picker-format="YY MMM DD"
+            [min]="startDateCtrl.value"
+            [max]="selectedPlace.dateTo"
+             [ngModel]="endDate"
+            name="toDate"
+            required
+          ></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-button type="submit" color="primary" expand="block"
+          >Book!</ion-button
+        >
+      </ion-col>
+    </ion-row> </ion-grid
+  >
 </ion-content>
