--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -4,6 +4,11 @@
       <ion-back-button [defaultHref]="'/places/tabs/offers/' + place.id"></ion-back-button>
     </ion-buttons>
     <ion-title>Edit Offer</ion-title>
+     <ion-buttons slot="primary">
+      <ion-button (click)="onUpdateOffer()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
