--- a/Ionic-with-Angular/ionic-booking-app/src/app/bookings/create-booking/create-booking.component.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/bookings/create-booking/create-booking.component.html
@@ -12,6 +12,7 @@
 </ion-header>
 
 <ion-content style="text-align: center" padding>
+  <form (ngSubmit)="onBookPlace()" #f="ngForm">
   <ion-grid>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
@@ -40,22 +41,21 @@
             <ion-select-option value="2">2</ion-select-option>
             <ion-select-option value="3">3</ion-select-option>
             <ion-select-option value="4">4</ion-select-option>
-            <ion-select-option value="5">5</ion-select-option> </ion-select
-          >
+            <ion-select-option value="5">5</ion-select-option>
+          </ion-select>
         </ion-item>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
-         <ion-label position="floating">From</ion-label>
+        <ion-label position="floating">From</ion-label>
         <ion-item>
-         
           <ion-datetime
             display-format="MMM DD YYYY"
             picker-format="YY MMM DD"
             ngModel
-              [min]="selectedPlace.dateFrom"
+            [min]="selectedPlace.dateFrom"
             [max]="selectedPlace.dateTo"
             [ngModel]="startDate"
             name="fromDate"
@@ -70,13 +70,12 @@
       <ion-col size-sm="6" offset-sm="3">
         <ion-label position="floating">To</ion-label>
         <ion-item>
-          
           <ion-datetime
             display-format="MMM DD YYYY"
             picker-format="YY MMM DD"
             [min]="startDateCtrl.value"
             [max]="selectedPlace.dateTo"
-             [ngModel]="endDate"
+            [ngModel]="endDate"
             name="toDate"
             required
           ></ion-datetime>
@@ -87,9 +86,10 @@
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-button type="submit" color="primary" expand="block"
-          >Book!</ion-button
+          [disabled]="!f.valid || !datesValid">Book!</ion-button
         >
       </ion-col>
-    </ion-row> </ion-grid
-  >
+    </ion-row>
+  </ion-grid>
+  </form>
 </ion-content>
