--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -39,11 +39,11 @@
     </ion-row>
 
     <!-- List of remaining cards -->
-
+    <!-- cdk virtual scroll is not updated after added new data below -->
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center">
-        <cdk-virtual-scroll-viewport itemSize="20" class="viewport">
-          <ion-item *cdkVirtualFor="let place of listedLoadedPlaces"  [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
+      <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center"> 
+        <cdk-virtual-scroll-viewport *ngIf="listedLoadedPlaces.length > 0" itemSize="30" class="viewport">
+          <ion-item *cdkVirtualFor="let place of listedLoadedPlaces; trackBy: trackByPlaceId"  [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl">
               </ion-img>
@@ -56,5 +56,17 @@
      </cdk-virtual-scroll-viewport>
       </ion-col>
     </ion-row>
+
+
+    <!-- Below is data which is updated correctly after adding the new place in the list  -->
+    <!-- <ion-row *ngFor="let place of loadedPlaces">
+      <ion-list>
+          <ion-item>
+            <ion-label>
+              {{ place.title }}
+            </ion-label>
+          </ion-item>
+      </ion-list>
+    </ion-row>
   </ion-grid>
-</ion-content>
+</ion-content> -->
