--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -43,7 +43,7 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" style="text-align: center"> 
         <cdk-virtual-scroll-viewport *ngIf="listedLoadedPlaces.length > 0" itemSize="30" class="viewport">
-          <ion-item *cdkVirtualFor="let place of listedLoadedPlaces; trackBy: trackByPlaceId"  [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
+          <ion-item *cdkVirtualFor="let place of listedLoadedPlaces"  [routerLink]="['/', 'places', 'tabs', 'discover', place.id]">
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl">
               </ion-img>
