--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/discover.page.html
@@ -18,18 +18,18 @@
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-card>
           <ion-card-header>
-            <ion-card-title> {{loadedPlaces[0].title}} </ion-card-title>
-            <ion-card-subtitle> {{loadedPlaces[0].price }} </ion-card-subtitle>
+            <ion-card-title> {{relevantPlaces[0].title}} </ion-card-title>
+            <ion-card-subtitle> {{relevantPlaces[0].price }} </ion-card-subtitle>
           </ion-card-header>
-          <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+          <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{ loadedPlaces[0].description}}</p>
+            <p>{{ relevantPlaces[0].description}}</p>
           </ion-card-content>
           <div>
             <ion-button
               fill="clear"
               color="primary"
-              [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]"
+              [routerLink]="['/', 'places', 'tabs', 'discover', relevantPlaces[0].id]"
               >
               More
               </ion-button>
@@ -59,7 +59,7 @@
 
 
     <!-- Below is data which is updated correctly after adding the new place in the list  -->
-    <!-- <ion-row *ngFor="let place of loadedPlaces">
+    <!-- <ion-row *ngFor="let place of relevantPlaces">
       <ion-list>
           <ion-item>
             <ion-label>
