--- a/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/place-detail/place-detail.page.html
+++ b/Ionic-with-Angular/ionic-booking-app/src/app/places/discover/place-detail/place-detail.page.html
@@ -8,5 +8,23 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button color="primary" margin (click)="onBookPlace()">Book</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-img [src]="place?.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <p>{{ place?.description}}</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-row>
+    <ion-col style="text-align: center;">
+      <ion-button style="text-align: center;" color="primary" margin (click)="onBookPlace()">Book</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
